♻️ refactor endpoints
